Lots of updates to the wedding party page

--- a/views/party.haml
+++ b/views/party.haml
@@ -52,7 +52,7 @@
     .name Kyle
     .title 
     .bio
-      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+      Kyle was the first friend I made when I moved to Illinois in 3rd grade.  He invited me over to his house to play Nerf guns.  The kinds of bonds that are formed in (foam) war are never broken and as such Kyle and I have remained close ever since.  We've played in bands together, run together, and formed a very serious foosball league together.  Above all, Kyle has been one of my oldest and most loyal friends.
   .party_member
     %img.party_photo(src="../images/party/rich.jpg" width="150" height="150")
     .name Rich
@@ -78,13 +78,46 @@
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
 
+.party_label(title="Yes, we made up a wedding job called 'Family Guard'.  It's so we could have a member of our family stand up with us during the cerimony.  It's our wedding we can make stuff up if we want.")
+  Family Guard
+%family_guard
+  .party_member
+    %img.party_photo(src="../images/party/tracy.jpg" width="150" height="150")
+    .name Tracy
+    .title Cousin of the Groom
+    .bio
+      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+  .party_member
+    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
+    .name Ti
+    .title Brother of the Bride
+    .bio
+      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
 .party_label
   Other Important Jobs
 %other
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
+    %img.party_photo(src="../images/party/andrew.jpg" width="150" height="150")
     .name Andrew
     .title Officiant
+    .bio
+      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+  .party_member
+    %img.party_photo(src="../images/party/matt.jpg" width="150" height="150")
+    .name Matt
+    .title Guitar
+    .bio
+      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+  .party_member
+    %img.party_photo(src="../images/party/sam.jpg" width="150" height="150")
+    .name Sam
+    .title Bass
+    .bio
+      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+  .party_member
+    %img.party_photo(src="../images/party/brandon.jpg" width="150" height="150")
+    .name Brandon
+    .title Drums
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
@@ -92,4 +125,4 @@
     .name Chairman Meow
     .title Cat
     .bio
-      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+      Chairman is a cat.  He does cat things.  No more.  No less.
