--- a/sass/daveandeileen.scss
+++ b/sass/daveandeileen.scss
@@ -106,6 +106,7 @@ ul.tweets {
   width: 72%;
   float: left;
   margin-right: 20px;
+  line-height: 1.4em;
 }
 
 #sidebar {
@@ -123,14 +124,25 @@ ul.tweets {
   clear: both;
 }
 
+h2.page_title {
+  color: $dark_tanish;
+  font-size: 30px;
+  font-family: 'Paytone One', sans-serif;
+  margin-bottom: 20px;
+  text-transform: lowercase;
+  clear: both;
+}
+
 .party_label {
   font-weight: bold;
   font-size: 30px;
   margin-bottom: 20px;
+  clear: both;
 }
 
 .party_member {
   margin-bottom: 20px;
+  clear: both;
 
   .name {
     font-weight: bold;
