--- a/views/backstory.haml
+++ b/views/backstory.haml
@@ -1,1 +1,9 @@
 %a(href="facts/rand") Random Fact
+
+%h2.page_title Dave Was Just Minding His Own Business When Eileen Barged Into His Room
+
+%h2.page_title They Got Closer When They Were Farther Away
+
+%h2.page_title Dave Locked That Down
+
+%iframe{allowfullscreen: "", frameborder: "0", height: "315", src: "//www.youtube.com/embed/DBYgA1P95qE", width: "420"}
