--- a/views/details.haml
+++ b/views/details.haml
@@ -1,2 +1,10 @@
-%h2
-  all about the wedding
+%h2.page_title
+  Ok, here's the deal...
+
+
+:markdown
+  Dave and Eileen are getting married on August 2nd at [Lacuna Art Lofts](http://lacuna2150.com/ "Lacuna Art Lofts") ( [2150 S. Canalport Ave, Chicago, IL](https://maps.google.com/maps?q=2150+South+Canalport+Avenue,+Chicago,+IL&hl=en&sll=41.853179,-87.650155&sspn=0.010533,0.022037&oq=2150+s+canalport+chicago,+il&hnear=2150+S+Canalport+Ave,+Chicago,+Illinois+60616&t=m&z=16) ).  The cerimony starts at 5:00 and will be held on the roof (weather permitting).  Given Chicago weather in August we will not be offended if you show up in beach attire. The cerimony will be imediatly followed by food, drinks, and general good times in first floor of the same building.  The reception will end at 11:00.  We don't have to go home but Lacuna management has informed me that we can't stay there.
+
+
+:markdown
+  I you feel the uncontrollable urge to buy us stuff we are registered at Guitar Center, Think Geek, and The LEGO Store.  (This list may be adjusted after Eileen reads this. - D)
