--- a/views/party.haml
+++ b/views/party.haml
@@ -1,4 +1,4 @@
-.party_label
+%h2.page_title
   Bridesmaids
 %bridesmaids
   .party_member
@@ -6,39 +6,39 @@
     .name Sarah
     .title maid of honor
     .bio
-      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+      Sarah has never eaten mustard.  She claims that because of the yellow color it feels like eating the sun, which would kill every living thing.  She would feel bad about that.
   .party_member
     %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Nicole
     .title 
     .bio
-      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+      Nicole is a direct decendent of Chef Boyardee.
   .party_member
     %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Alice
     .title 
     .bio
-      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+      Alice can predict the winner of the Super Bowl with 100% accuracy but she doesn't because it would seem showy.
   .party_member
     %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Natalie
     .title 
     .bio
-      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+      Natalie once ate a bug.  Nobody even dared her to do it.  She just did it.
   .party_member
     %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Mellisa
     .title 
     .bio
-      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+      Mellisa can spell some really tricky words.
   .party_member
     %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Adina
     .title 
     .bio
-      Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
+      Adina used to be a great trombone player before an unfortunate blogging accident.
 
-.party_label
+%h2.page_title
   Groomsmen
 %groomsmen
   .party_member
@@ -78,7 +78,7 @@
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
 
-.party_label(title="Yes, we made up a wedding job called 'Family Guard'.  It's so we could have a member of our family stand up with us during the cerimony.  It's our wedding we can make stuff up if we want.")
+%h2.page_title(title="Yes, we made up a wedding job called 'Family Guard'.  It's so we could have a member of our family stand up with us during the cerimony.  It's our wedding we can make stuff up if we want.")
   Family Guard
 %family_guard
   .party_member
@@ -93,7 +93,7 @@
     .title Brother of the Bride
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
-.party_label
+%h2.page_title
   Other Important Jobs
 %other
   .party_member
