Wrote a BUNCH of content

--- a/sass/daveandeileen.scss
+++ b/sass/daveandeileen.scss
@@ -20,7 +20,7 @@ header {
 
 nav {
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: -5px;
 }
 
 footer {
@@ -131,6 +131,16 @@ h2.page_title {
   margin-bottom: 20px;
   text-transform: lowercase;
   clear: both;
+}
+
+.dave_head {
+  display: inline;
+  float: right;
+}
+
+.eileen_head {
+  display: inline;
+  float: left;
 }
 
 .thumb_pic {
