--- a/views/backstory.haml
+++ b/views/backstory.haml
@@ -1,9 +1,47 @@
-%a(href="facts/rand") Random Fact
+%h2.page_title At first we were just friends...
 
-%h2.page_title Dave Was Just Minding His Own Business When Eileen Barged Into His Room
+.dave_side
+  %img.dave_head(src="./images/backstory/dave_head.png")
+  :markdown
+    It was my sophmore year at U of I.  I was sitting in my room, minding my own buisiness when Eileen and a few of her friends barged into my dorm room.  They were insistant on becoming friends with everybody in the dorm and Jeff and I fit that bill.  Presumably enamored by my wit and rugged good looks, Eileen and her friends (many of these friends are in the [bridal party](/party_animals) of this very wedding!) started inviting me out with them and soon they consumed most of my [college social life](/images/backstory/halloweenppl.jpg). 
 
-%h2.page_title They Got Closer When They Were Farther Away
+  :markdown
+    Eileen and I were both in long distance relationships at the time and started bonding over our shared experiences.  As time when on we found ourselves out of relationships but still hanging out quite often.  It suddendly dawned on me that I was spending a lot of my time with a beautiful girl with whom I had much in common with.  Why wasn't I dating her?  Eileen was (perhaps foolishly?) reluctant to be more than friends.  I don't want to spoil the ending for you but don't worry, this ends up working out for me in the end.
 
-%h2.page_title Dave Locked That Down
+  :markdown
+    I tried several more times to convince Eileen
+
+.eileen_side
+  %img.eileen_head(src="./images/backstory/eileen_head.png")
+  :markdown
+    High Life occaecat asymmetrical, proident 8-bit cardigan deserunt drinking vinegar incididunt cornhole readymade butcher roof party do. Truffaut pariatur trust fund, distillery ethnic viral Odd Future flexitarian Thundercats. Tempor church-key Marfa PBR&B, single-origin coffee direct trade ethnic quis proident banh mi elit tattooed. American Apparel minim paleo, bitters kitsch wolf roof party brunch craft beer Echo Park aute four loko bicycle rights. Cliche typewriter gastropub, placeat craft beer banjo qui fanny pack irony pariatur Etsy cillum ugh. Mollit qui YOLO, leggings Shoreditch consectetur pop-up street art esse aliqua. Single-origin coffee fixie meggings PBR&B, actually locavore McSweeney's.
+
+%h2.page_title Then we started dating...
+
+.dave_side
+  %img.dave_head(src="./images/backstory/dave_head.png")
+  :markdown
+    High Life occaecat asymmetrical, proident 8-bit cardigan deserunt drinking vinegar incididunt cornhole readymade butcher roof party do. Truffaut pariatur trust fund, distillery ethnic viral Odd Future flexitarian Thundercats. Tempor church-key Marfa PBR&B, single-origin coffee direct trade ethnic quis proident banh mi elit tattooed. American Apparel minim paleo, bitters kitsch wolf roof party brunch craft beer Echo Park aute four loko bicycle rights. Cliche typewriter gastropub, placeat craft beer banjo qui fanny pack irony pariatur Etsy cillum ugh. Mollit qui YOLO, leggings Shoreditch consectetur pop-up street art esse aliqua. Single-origin coffee fixie meggings PBR&B, actually locavore McSweeney's.
+
+.eileen_side
+  %img.eileen_head(src="./images/backstory/eileen_head.png")
+  :markdown
+    High Life occaecat asymmetrical, proident 8-bit cardigan deserunt drinking vinegar incididunt cornhole readymade butcher roof party do. Truffaut pariatur trust fund, distillery ethnic viral Odd Future flexitarian Thundercats. Tempor church-key Marfa PBR&B, single-origin coffee direct trade ethnic quis proident banh mi elit tattooed. American Apparel minim paleo, bitters kitsch wolf roof party brunch craft beer Echo Park aute four loko bicycle rights. Cliche typewriter gastropub, placeat craft beer banjo qui fanny pack irony pariatur Etsy cillum ugh. Mollit qui YOLO, leggings Shoreditch consectetur pop-up street art esse aliqua. Single-origin coffee fixie meggings PBR&B, actually locavore McSweeney's.
+
+%h2.page_title Then we got engaged...
+
+.dave_side
+  %img.dave_head(src="./images/backstory/dave_head.png")
+  :markdown
+    High Life occaecat asymmetrical, proident 8-bit cardigan deserunt drinking vinegar incididunt cornhole readymade butcher roof party do. Truffaut pariatur trust fund, distillery ethnic viral Odd Future flexitarian Thundercats. Tempor church-key Marfa PBR&B, single-origin coffee direct trade ethnic quis proident banh mi elit tattooed. American Apparel minim paleo, bitters kitsch wolf roof party brunch craft beer Echo Park aute four loko bicycle rights. Cliche typewriter gastropub, placeat craft beer banjo qui fanny pack irony pariatur Etsy cillum ugh. Mollit qui YOLO, leggings Shoreditch consectetur pop-up street art esse aliqua. Single-origin coffee fixie meggings PBR&B, actually locavore McSweeney's.
+
+.eileen_side
+  %img.eileen_head(src="./images/backstory/eileen_head.png")
+  :markdown
+    High Life occaecat asymmetrical, proident 8-bit cardigan deserunt drinking vinegar incididunt cornhole readymade butcher roof party do. Truffaut pariatur trust fund, distillery ethnic viral Odd Future flexitarian Thundercats. Tempor church-key Marfa PBR&B, single-origin coffee direct trade ethnic quis proident banh mi elit tattooed. American Apparel minim paleo, bitters kitsch wolf roof party brunch craft beer Echo Park aute four loko bicycle rights. Cliche typewriter gastropub, placeat craft beer banjo qui fanny pack irony pariatur Etsy cillum ugh. Mollit qui YOLO, leggings Shoreditch consectetur pop-up street art esse aliqua. Single-origin coffee fixie meggings PBR&B, actually locavore McSweeney's.
 
 %iframe{allowfullscreen: "", frameborder: "0", height: "315", src: "//www.youtube.com/embed/DBYgA1P95qE", width: "420"}
+
+
+%h2
+  %a(href="facts/rand") Random Dave & Eileen Fact
