Changed lightbox library to Litebox2, a few more content adjustments

--- a/views/party.haml
+++ b/views/party.haml
@@ -27,10 +27,10 @@
       Natalie once ate a bug.  Nobody even dared her to do it.  She just did it.
   .party_member
     %img.party_photo(src="../images/party/mellisa.jpg" width="150" height="150")
-    .name Mellisa
+    .name Melissa
     .title 
     .bio
-      Mellisa can spell some really tricky words.
+      Melissa can spell some really tricky words.
   .party_member
     %img.party_photo(src="../images/party/adina.jpg" width="150" height="150")
     .name Adina
@@ -119,7 +119,7 @@
     .name Brandon
     .title Drums
     .bio
-      Winger also came into my life through The American Autumn.  His zest for life and love of pasttimes that might endager it have led to countless goodtimes together.
+      Winger also came into my life through The American Autumn.  His zest for life and love of pasttimes that might endanger it have led to countless goodtimes together.
   .party_member
     %img.party_photo(src="../images/party/chairman.jpg" width="150" height="150")
     .name Chairman Meow
