--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,13 +5,14 @@
     %link(rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Paytone+One")
     %link(rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css")
     %link(rel="stylesheet" type="text/css" href="../stylesheets/daveandeileen.css")
+    %link(rel="stylesheet" type="text/css" href="../stylesheets/lightbox.css")
     %link(href="http://fonts.googleapis.com/css?family=Neuton" rel="stylesheet" type="text/css")
 
-    %script{src: "../js-global/FancyZoom.js", type: "text/javascript"}
-    %script{src: "../js-global/FancyZoomHTML.js", type: "text/javascript"}
+    %script{src: "../javascripts/jquery-1.10.2.min.js", type: "text/javascript"}
+    %script{src: "../javascripts/lightbox-2.6.min.js", type: "text/javascript"}
 
     %link(rel="shortcut icon" type="image/x-icon" href="images/favicon.ico")
-  %body(id="d_and_e_body" onload="setupZoom()")
+  %body
     #shell
       %header
         %a(href="../" title="Dave + Eileen")
