--- a/views/details.haml
+++ b/views/details.haml
@@ -2,16 +2,16 @@
   When?
 
 :markdown
-  We are getting married on August 2nd, 2014.  The cerimony starts at 5:00 and will be imediatly followed by food, drinks, and general good times. The reception will end at 11:00. We don't have to go home but Lacuna management has informed me that we can't stay there.
+  We are getting married on August 2nd, 2014.  The ceremony starts at 5:00 and will be immediately followed by food, drinks, and general good times. The reception will end at 11:00. We don't have to go home but Lacuna management has informed me that we can't stay there.
 
 %h2.page_title
   Where?
 
 :markdown
-  The wedding will be held at [Lacuna Art Lofts](http://lacuna2150.com/ "Lacuna Art Lofts") ( [2150 S. Canalport Ave, Chicago, IL](https://maps.google.com/maps?q=2150+South+Canalport+Avenue,+Chicago,+IL&hl=en&sll=41.853179,-87.650155&sspn=0.010533,0.022037&oq=2150+s+canalport+chicago,+il&hnear=2150+S+Canalport+Ave,+Chicago,+Illinois+60616&t=m&z=16) ).  The cerimony will be held on the roof (weather permitting) and the reception will held on the first floor of the same building.
+  The wedding will be held at [Lacuna Art Lofts](http://lacuna2150.com/ "Lacuna Art Lofts") ( [2150 S. Canalport Ave, Chicago, IL](https://maps.google.com/maps?q=2150+South+Canalport+Avenue,+Chicago,+IL&hl=en&sll=41.853179,-87.650155&sspn=0.010533,0.022037&oq=2150+s+canalport+chicago,+il&hnear=2150+S+Canalport+Ave,+Chicago,+Illinois+60616&t=m&z=16) ).  The ceremony will be held on the roof (weather permitting) and the reception will held on the first floor of the same building.
 
 %h2.page_title
   What else?
 
 :markdown
-  I you feel the uncontrollable urge to buy us stuff we are registered at Guitar Center, Think Geek, and The LEGO Store.  (This list may be adjusted after Eileen reads this. - D)
+  I you feel the uncontrollable urge to buy us stuff we are registered at Guitar Center, Think Geek, and The LEGO Store.  *(This list may be adjusted after Eileen reads this. - D)*
