--- a/views/index.haml
+++ b/views/index.haml
@@ -11,4 +11,4 @@
 %img(src="../images/fact.png")
 .fact
   :markdown
-    If you've forgotten how send mail you can RSVP right here on this website (sometime in the future)
+    If you've forgotten how send mail you can RSVP right here on this website *(sometime in the future)*
