--- a/views/party.haml
+++ b/views/party.haml
@@ -3,36 +3,42 @@
 %bridesmaids
   .party_member
     %img.party_photo(src="../images/party/sarah.jpg" width="150" height="150")
+    %a(name="sarah")
     .name Sarah
     .title maid of honor
     .bio
       Sarah has never eaten mustard.  She claims that because of the yellow color it feels like eating the sun, which would kill every living thing.  She would feel bad about that.
   .party_member
     %img.party_photo(src="../images/party/nicole.jpg" width="150" height="150")
+    %a(name="nicole")
     .name Nicole
     .title 
     .bio
       Nicole is a direct descendent of Chef Boyardee.
   .party_member
     %img.party_photo(src="../images/party/alice.jpg" width="150" height="150")
+    %a(name="alice")
     .name Alice
     .title 
     .bio
       Alice can predict the winner of the Super Bowl with 100% accuracy but she doesn't because it would seem showy.
   .party_member
     %img.party_photo(src="../images/party/natalie.jpg" width="150" height="150")
+    %a(name="natalie")
     .name Natalie
     .title 
     .bio
       Natalie once ate a bug.  Nobody even dared her to do it.  She just did it.
   .party_member
     %img.party_photo(src="../images/party/mellisa.jpg" width="150" height="150")
+    %a(name="melissa")
     .name Melissa
     .title 
     .bio
       Melissa can spell some really tricky words.
   .party_member
     %img.party_photo(src="../images/party/adina.jpg" width="150" height="150")
+    %a(name="adina")
     .name Adina
     .title 
     .bio
@@ -43,52 +49,60 @@
 %groomsmen
   .party_member
     %img.party_photo(src="../images/party/jeff.jpg" width="150" height="150")
+    %a(name="jeff")
     .name Jeff
     .title best man
     .bio
-      I met Jeff in 7th grade and we've somehow been friends ever since.  I say "somehow" because to the untrained eye we appear to be polar opposites.  This might be true but it didn't stop us from being virtually insperable during Jr. high, high school (a feat made all the more impressive by the fact that we went to different hight schools), and college (where we lived together for 4 years and managed to no kill each other).  Even though these days we live a few thousand miles apart we still talk online almost every day.  
+      I met Jeff in 7th grade and we've somehow been friends ever since.  I say "somehow" because to the untrained eye we appear to be polar opposites.  This might be true but it didn't stop us from being virtually inseparable during Jr. high, high school (a feat made all the more impressive by the fact that we went to different hight schools), and college (where we lived together for 4 years and managed to no kill each other).  Even though these days we live a few thousand miles apart we still talk online almost every day.  
   .party_member
     %img.party_photo(src="../images/party/kyle.jpg" width="150" height="150")
+    %a(name="kyle")
     .name Kyle
     .title 
     .bio
       Kyle was the first friend I made when I moved to Illinois in 3rd grade.  He invited me over to his house to play Nerf guns.  The kinds of bonds that are formed in (foam) war are never broken and as such Kyle and I have remained close ever since.  We've played in bands together, run together, and formed a very serious foosball league together.  Above all, Kyle has been one of my oldest and most loyal friends.
   .party_member
     %img.party_photo(src="../images/party/rich.jpg" width="150" height="150")
+    %a(name="rich")
     .name Rich
     .title 
     .bio
-      Rich is another old friend from Jr. high (never underestimate the bonding power of Catholic school).  After spending our youth together devoting our time to childish mischief making we eventually grew up, became adults, and became roomates in Chicago where we devoted our time to childish mischief making.  Many a glorious evening was spent on our balcony in Chicago drinking Early Times whiskey and people watching.  Now that we live in different states most of our communications are done through the exchange of dirty jokes and our bond is as close as ever.
+      Rich is another old friend from Jr. high (never underestimate the bonding power of Catholic school).  After spending our youth together devoting our time to childish mischief making we eventually grew up, became adults, and became roommates in Chicago where we devoted our time to childish mischief making.  Many a glorious evening was spent on our balcony in Chicago drinking Early Times whiskey and people watching.  Now that we live in different states most of our communications are done through the exchange of dirty jokes and our bond is as close as ever.
   .party_member
     %img.party_photo(src="../images/party/chris.jpg" width="150" height="150")
+    %a(name="chris")
     .name Chris
     .title 
     .bio
-      While Chris and I were certainly aware of eachother during highschool he really came into my life during college when I needed a bass player.  I got my bass player and damn good friend to boot.  We've started several bands together, lived together, and once almost ruiend Easter.  Chris and I have been through thick and thin over the years and he's always been there for me when it matters.  We might go out our way to torment eachother but we'd do anything help eachother.
+      While Chris and I were certainly aware of each other during highschool he really came into my life during college when I needed a bass player.  I got my bass player and damn good friend to boot.  We've started several bands together, lived together, and once almost ruined Easter.  Chris and I have been through thick and thin over the years and he's always been there for me when it matters.  We might go out our way to torment each other but we'd do anything help each other.
   .party_member
     %img.party_photo(src="../images/party/josh.jpg" width="150" height="150")
+    %a(name="josh")
     .name Josh
     .title 
     .bio
-      When I first started hanging out with Josh I was tried to get him to buy me Taco Bell for no good reason.  From that foundation of irrational requests grew a fantastic friendship.  Like so many other important people in my life, Josh and I bonded over music whie playing in a few bands together.  I can't describe our friendship any better than he desribed it in his own groomsman bio; Josh is my "friend, nemisis, teacher, student, antagonist, inspiration, competition, assaulter, collaborator and accessory".
+      When I first started hanging out with Josh I was tried to get him to buy me Taco Bell for no good reason.  From that foundation of irrational requests grew a fantastic friendship.  Like so many other important people in my life, Josh and I bonded over music while playing in a few bands together.  I can't describe our friendship any better than he described it in his own groomsman bio; Josh is my "friend, nemesis, teacher, student, antagonist, inspiration, competition, assaulter, collaborator and accessory".
   .party_member
     %img.party_photo(src="../images/party/dane.jpg" width="150" height="150")
+    %a(name="dane")
     .name Dane
     .title 
     .bio
-      Dane was one of the first friends I made during my Freshman year of highschool.  We were the kinda weird ska/punk kids.  Some of my favorite memories from highschool involved hanging out at his house, including the first real show I ever played.  I have probably played shared a stage more often with Dane than with any other bandmate I've ever had and every time it has been an honor.  Along with his percussionary prowess Dane has the biggest heart of anybody I know and I'm very greatful to have him in my life.  
+      Dane was one of the first friends I made during my Freshman year of highschool.  We were the kinda weird ska/punk kids.  Some of my favorite memories from highschool involved hanging out at his house, including the first real show I ever played.  I have probably played shared a stage more often with Dane than with any other bandmate I've ever had and every time it has been an honor.  Along with his percussionary prowess Dane has the biggest heart of anybody I know and I'm very grateful to have him in my life.  
 
-%h2.page_title(title="Yes, we made up a wedding job called 'Family Guard'.  It's so we could have a member of our family stand up with us during the cerimony.  It's our wedding we can make stuff up if we want.")
+%h2.page_title(title="Yes, we made up a wedding job called 'Family Guard'.  It's so we could have a member of our family stand up with us during the ceremony.  It's our wedding we can make stuff up if we want.")
   Family Guard
 %family_guard
   .party_member
     %img.party_photo(src="../images/party/tracy.jpg" width="150" height="150")
+    %a(name="tracy")
     .name Tracy
     .title Cousin of the Groom
     .bio
-      Even though we've always lived far away from eachother Tracy and I were able to really bond when she would come to stay with my family during the summers when we were in highschool.  Ever since then I have thought of her like a sister.  Being an only child it has been great to have loving family like Tracy in my life.
+      Even though we've always lived far away from each other Tracy and I were able to really bond when she would come to stay with my family during the summers when we were in highschool.  Ever since then I have thought of her like a sister.  Being an only child it has been great to have loving family like Tracy in my life.
   .party_member
     %img.party_photo(src="../images/party/ti.jpg" width="150" height="150")
+    %a(name="ti")
     .name Ti
     .title Brother of the Bride
     .bio
@@ -98,30 +112,35 @@
 %other
   .party_member
     %img.party_photo(src="../images/party/andrew.jpg" width="150" height="150")
+    %a(name="andrew")
     .name Andrew
     .title Officiant
     .bio
       Andrew can eat his own weight in popcorn, which is not very much because he is not a large man.
   .party_member
     %img.party_photo(src="../images/party/matt.jpg" width="150" height="150")
+    %a(name="matt")
     .name Matt
     .title Guitar
     .bio
-      Mills is a man of prinicples who takes his fun very seriously.  He played guitar with me in Davenport and we've had many a good time as bandmates and drinking buddies.
+      Mills is a man of principles who takes his fun very seriously.  He played guitar with me in Davenport and we've had many a good time as bandmates and drinking buddies.
   .party_member
     %img.party_photo(src="../images/party/sam.jpg" width="150" height="150")
+    %a(name="sam")
     .name Sam
     .title Bass
     .bio
       Sam and I started hanging out regularly when he joined The American Autumn and I've loved every minute of it.  He's a great bass player and an even better human being.
   .party_member
     %img.party_photo(src="../images/party/brandon.jpg" width="150" height="150")
+    %a(name="brandon")
     .name Brandon
     .title Drums
     .bio
       Winger also came into my life through The American Autumn.  His zest for life and love of pasttimes that might endanger it have led to countless goodtimes together.
   .party_member
     %img.party_photo(src="../images/party/chairman.jpg" width="150" height="150")
+    %a(name="chairman")
     .name Chairman Meow
     .title Cat
     .bio
