--- a/public/stylesheets/daveandeileen.css
+++ b/public/stylesheets/daveandeileen.css
@@ -121,6 +121,14 @@ h2.page_title {
   clear: both;
 }
 
+.eileen_side, .dave_side {
+  margin-bottom: 10px;
+}
+
+.eileen_side {
+  border-bottom: 1px #a4b6be dashed;
+}
+
 .dave_head {
   display: inline;
   float: right;
