Updated analytics tracking account

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -37,6 +37,6 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-26395962-2', 'daveandeileen.com');
+        ga('create', 'UA-711603-10', 'daveandeileen.com');
         ga('send', 'pageview');
       }
